--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ a {
     color: #757575;
 }
 
-
 ul,
 ol,
 li {
@@ -23,10 +22,22 @@ body {
     line-height: 1;
     font-family: 'Roboto', sans-serif;
     /* font-family: 'Raleway', sans-serif; */
-
 }
 
+:root { 
+    --third-text-color:#ffffff;
+    --bg-color:#2F303A;
+    --text-color:#212121;
+    --secondary-text-color:#757575;
+    --bg-link-color: #2196F3;
+    
+}
 
+button {
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+}
 /* ==============================================================================================================
                                     HEDEAR
 ============================================================================================================== */
@@ -56,7 +67,7 @@ body {
 }
 
 .logo-web {
-    color: #2196F3;
+    color: var(--bg-link-color);
 }
 
 .header-list-box {
@@ -74,16 +85,16 @@ body {
 }
 
 .header-link {
-    color: #212121;
+    color: var(--text-color);
 }
 
 .header-link:hover,
 .header-link:focus {
-    color: #2196F3;
+    color: var(--bg-link-color);
 }
 
 .nav-page .header-link.current {
-    color: #2196F3;
+    color: var(--bg-link-color);
 }
 
 .contacts {
@@ -97,7 +108,7 @@ body {
 }
 
 .heder-linked {
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 
 
@@ -109,7 +120,7 @@ body {
 /* =======================HERO================================= */
 
 .container {
-    background: #2F303A;
+    background: var(--bg-color);
 }
 
 .hero {
@@ -124,7 +135,7 @@ body {
     line-height: 1.36;
     text-align: center;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var( --third-text-color);
     display: flex;
     align-items: center;
     padding-top: 200px;
@@ -136,14 +147,14 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    color: #FFFFFF;
+    color: var( --third-text-color);
     margin: 45px 470px 200px;
     cursor: pointer;
     border: none;
     width: 215px;
     border-radius: 4px;
     height: 50px;
-    background: #2196F3;
+    background: var(--bg-link-color);
 }
 
 /* =====================OUR SKILLS======================== */
@@ -162,7 +173,7 @@ body {
 .title-none {
     width: 1px;
     height: 1px;
-    color: #FFFFFF;
+    color: var( --third-text-color);
 }
 
 .skills-box {
@@ -183,12 +194,12 @@ body {
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
-    color: #212121;
+    color: var(--text-color);
     padding-bottom: 20px;
 }
 
 .list-about {
-    color: #757575;
+    color: var(--secondary-text-color);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -202,7 +213,7 @@ body {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    color: #212121;
+    color: var(--text-color);
     margin-bottom: 60px;
 }
 
@@ -213,8 +224,8 @@ body {
 }
 
 .section-list {
-    display: flex;
-    display: inline-block;
+    /* display: flex;
+    display: inline-block; */
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -224,7 +235,7 @@ body {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    color: #212121;
+    color: var(--text-color);
     padding-top: 30px;
 }
 
@@ -236,29 +247,21 @@ body {
     padding-top: 15px;
 }
 
-.list-size {
-    background: #fff;
-    height: 370px;
-    width: 270px;
-    border: #fff solid 1px;
-    box-shadow: 20%;
-}
-
-
 /* ==============================================================================================================
                                    FOOTER
 ============================================================================================================== */
+
 address {
     font-style: normal;
 }
 
 footer {
-    background: #2F303A;
+    background: var(--bg-color);
     height: 250px;
 }
 
 .black {
-    color: #2F303A;
+    color: var(--bg-color);
 }
 
 .footer-logo {
@@ -270,7 +273,12 @@ footer {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    color: #FFFFFF;
+    color: var( --third-text-color);
+}
+
+.link-maps:hover,
+.link-maps:focus {
+    color: var( --bg-link-color);
 }
 
 .foot-list {
@@ -282,6 +290,11 @@ footer {
     font-size: 14px;
     line-height: 1.71;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.link-address:hover,
+.link-address:focus {
+    color: var(--bg-link-color);
 }
 
 
@@ -312,7 +325,7 @@ footer {
     font-weight: 500;
     font-size: 16px;
     line-height: 2.5;
-    color: #212121;
+    color: var(--text-color);
     width: 100px;
     height: 40px;
     background: #F5F4FA;
@@ -322,12 +335,12 @@ footer {
 
 .port-button:hover,
 .port-button:focus {
-    background: #2196F3;
+    background: var(--bg-link-color);
 }
 
 .port-button:hover,
 .port-button:focus {
-    color: #FFFFFF;
+    color: var( --third-text-color);
 }
 
 .portfolio-conteiner {
@@ -347,7 +360,7 @@ footer {
     font-weight: 700;
     font-size: 18px;
     line-height: 2.25;
-    color: #212121;
+    color: var(--text-color);
     padding-left: 25px;
     padding-top: 35px;
 }
